--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.2",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
+    "razorpay": "^2.9.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
@@ -21,14 +22,11 @@
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"  
-     
-    
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
