--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.2",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1",
     "razorpay": "^2.9.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
