--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1",
+    "mailgun-js": "^0.22.0",
     "razorpay": "^2.9.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
