--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.15",
+    "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
